--- a/bonus.html
+++ b/bonus.html
@@ -24,11 +24,11 @@
                 <div class="preview-container d-flex justify-content-center">
                     <button class="mt-2 position-absolute btn-prev">&#8963;</button>
                     <div class="img-preview-container">
-                        <img src="img/01.webp" class="preview-img active">
-                        <img src="img/02.webp" class="preview-img">
-                        <img src="img/03.webp" class="preview-img">
-                        <img src="img/04.webp" class="preview-img">
-                        <img src="img/05.webp" class="preview-img">
+                        <img src="img/01.webp" id="prev-img-0" class="preview-img">
+                        <img src="img/02.webp" id="prev-img-1" class="preview-img">
+                        <img src="img/03.webp" id="prev-img-2" class="preview-img">
+                        <img src="img/04.webp" id="prev-img-3" class="preview-img">
+                        <img src="img/05.webp" id="prev-img-4" class="preview-img">
                     </div>
                     <button class="position-absolute bottom-0 mb-2 btn-next">&#8964;</button>
                 </div>
