--- a/bonus.html
+++ b/bonus.html
@@ -14,11 +14,7 @@
         <div class="row justify-content-center carousel-container">
             <div class="col-10 position-relative d-flex justify-content-center">
                 <div class="img-container">
-                    <img src="" class="img-fluid template-img position-absolute">
-                    <img src="" class="img-fluid template-img position-absolute d-none">
-                    <img src="" class="img-fluid template-img position-absolute d-none">
-                    <img src="" class="img-fluid template-img position-absolute d-none">
-                    <img src="" class="img-fluid template-img position-absolute d-none">
+                    <img src="" class="img-fluid template-img">
                 </div>
                 
                 <div class="preview-container d-flex justify-content-center">
